# decoreco

./: CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  bacon.toml  travis.yml
src/: cli.rs  main.rs
