[package]
name = "decoreco"
version = "0.2.0"
edition = "2021"
license = "CC0-1.0"
description = "decode and re-encode big media files to save space"
homepage = "https://github.com/Jabster28/decoreco"
repository = "https://github.com/Jabster28/decoreco"
readme = "README.md"
keywords = ["ffmpeg", "decode", "encode", "re-encode", "decoreco"]
categories = ["multimedia", "video", "audio", "converter", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
colored = "2.0.0"
indicatif = "0.16.2"
prettytable-rs = "0.8.0"
tempfile = "3.2.0"
term_size = "0.3.2"
man = "0.3.0"
